# cameraBuildingBlocks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/matlab/example01-simpleImageOperations/: brightness.m  contrast.m  getRGB.m  getYUV.m  keyPressed.m  powerLaw.m  processImage.m  setSaturation.m  showImg.m  simpleImageOperations.m  sliderMoved.m  textInputCallback.m
examples/showImg/: showImg.cpp  showImgServer.cpp  showImgServer.hpp
modules/kernel/mockup/: Makefile  rickroll.c
scripts/: build.sh  clean.sh  submodules.sh
